# Bejeweled

./: .gitignore  BUILD_VERIFICATION_REPORT.md  CMakeLists.txt  COIN_SYSTEM_GUIDE.md  copy-qt-dlls.ps1  detect-and-update-qt.ps1  download-and-install-qt.ps1  test_coin_system.cpp
.cache/clangd/index/: AuthNetData.cpp.A0AE92F554B493F8.idx  AuthNetData.h.FFD4988B98D392BD.idx  AuthServer.cpp.401C655C6D5273B1.idx  AuthServer.h.EAFBCC2E5CDF6C5A.idx  AuthWindow.cpp.5EF029671C5158B2.idx  AuthWindow.cpp.96210D3628C88EB4.idx  AuthWindow.h.0CCB83E1C89B2605.idx  LoginWindow.cpp.9D689D825A1C5F76.idx  LoginWindow.h.B144BFDFB5D6D8DE.idx  json.hpp.87DC93C76824CDA3.idx  main.cpp.639922DBEBE49F97.idx
.claude/: settings.local.json
assets/: README.md
cmake/: FindGLFW3.cmake  tmp_find.cmake
drawio/: AboutWidget.drawio  AchievementData.drawio  AchievementIndex.drawio  AchievementSystem.drawio  AchievementsBackgroundDecoration.drawio  AchievementsWidget.drawio  AudioManager.drawio  AuthButton.drawio  AuthLineEdit.drawio  AuthNetData.drawio  AuthNoticeDialog.drawio  AuthWindow.drawio  BGMManager.drawio  BackgroundManager.drawio  CoinDatabase.drawio  CoinSystem.drawio  Config.drawio  Difficulty.drawio  FinalWidget.drawio  GameNetData.drawio  GameTimeKeeper.drawio  GameWindow.drawio  Gemstone.drawio  GemstoneModelManager.drawio  GemstoneStyle.drawio  GradientLevelLabel.drawio  ItemInfo.drawio  ItemSystem.drawio  ItemType.drawio  LogWindow.drawio  LoginWidget.drawio  MenuButton.drawio  MenuWidget.drawio  MultiGameWaitWidget.drawio  MultiplayerModeGameWidget.drawio  NetDataIO.drawio  OtherNetData.drawio  OtherNetDataIO.drawio  Particle.drawio  PlayMenuWidget.drawio  (+17 more)
drawio/ProcessGraph/: AVModule.drawio  AchievementModule.drawio  AuthModule.drawio  MultiplayerMode.drawio  NormalMode.drawio  PuzzleMode.drawio  RankListModule.drawio  StoreModule.drawio  WhirlwindMode.drawio
include/components/: AchievementItemWidget.h
include/game/data/: AchievementData.h
include/widgets/: AchievementsWidget.h
resources/animals/: gem_type_0.mtl  gem_type_1.mtl  gem_type_2.mtl  gem_type_3.mtl  gem_type_4.mtl  gem_type_5.mtl  gem_type_6.mtl  gem_type_7.mtl
resources/fastfood/: gem_type_0.mtl  gem_type_1.mtl  gem_type_2.mtl  gem_type_3.mtl  gem_type_4.mtl  gem_type_5.mtl
resources/gemstones/: gem_type_0.mtl  gem_type_2.mtl  gem_type_5.mtl
resources/planets/: gem_type_4.mtl  gem_type_5.mtl  gem_type_6.mtl  gem_type_7.mtl
server/: CMakeLists.txt
server/.cache/clangd/index/: main.cpp.BCAE7158C7B26392.idx
server/include/boost/: asio.hpp
server/src/: Config.h
server/src/authServer/: AuthNetData.cpp  AuthNetData.h  AuthServer.cpp  AuthServer.h  AuthServer_stub.cpp
server/src/util/: SqlUtil.cpp  SqlUtil_stub.cpp
src/: Config.h  LoginWindow.cpp  LoginWindow.h  main.cpp
src/auth/: AuthNetData.cpp  AuthNetData.h  AuthWindow.cpp  AuthWindow.h
src/auth/authWidgets/: LoginWidget.cpp  LoginWidget.h  RegisterWidget.cpp  RegisterWidget.h
src/auth/components/: AuthButton.cpp  AuthLineEdit.cpp  AuthLineEdit.h  AuthNoticeDialog.cpp  AuthNoticeDialog.h
src/authServer/: AuthServer.cpp
src/components/: AchievementItemWidget.cpp  AuthButton.h  AuthLineEdit.h
src/game/: GameWindow.cpp  GameWindow.h  TestWindow.cpp  TestWindow.h
src/game/components/: Gemstone.cpp  Gemstone.h  MenuButton.cpp  MenuButton.h  RotationSquare.cpp  RotationSquare.h  SelectedCircle.cpp  SelectedCircle.h
src/game/data/: AchievementData.cpp  AchievementData.h  AchievementSystem.cpp  AchievementSystem.h  CoinDatabase.cpp  CoinDatabase.h  CoinSystem.cpp  CoinSystem.h  ItemSystem.cpp  ItemSystem.h  NetDataIO.cpp  NetDataIO.h  OtherNetData.h  OtherNetDataIO.cpp  OtherNetDataIO.h
src/game/gameWidgets/: AboutWidget.cpp  AboutWidget.h  AchievementsWidget.cpp  AchievementsWidget.h  FinalWidget.cpp  FinalWidget.h  GradientLevelLabel.cpp  GradientLevelLabel.h  MenuWidget.cpp  MenuWidget.h  MultiGameWaitWidget.cpp  MultiGameWaitWidget.h  MultiplayerModeGameWidget.cpp  MultiplayerModeGameWidget.h  PlayMenuWidget.cpp  PlayMenuWidget.h  PuzzleModeGameWidget.cpp  PuzzleModeGameWidget.h  RankListWidget.cpp  RankListWidget.h  SettingWidget.cpp  SettingWidget.h  SingleModeGameWidget.cpp  SingleModeGameWidget.h  StoreWidget.cpp  StoreWidget.h  VictoryBanner.cpp  VictoryBanner.h  WhirlwindModeGameWidget.cpp  WhirlwindModeGameWidget.h
src/game/managers/: AudioManager.cpp  AudioManager.h
src/gamewidget/: MainInterface.cpp  MainInterface.h
src/util/: SqlUtil.cpp  SqlUtil.h
src/utils/: AudioManager.cpp  AudioManager.h  BGMManager.cpp  BGMManager.h  BackgroundManager.cpp  BackgroundManager.h  LogWindow.cpp  LogWindow.h  ResourceUtils.cpp  ResourceUtils.h
src/widgets/: AchievementsWidget.cpp  LoginWidget.cpp  LoginWidget.h  RegisterWidget.cpp
